--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
     "name": "vibe",
     "displayName": "vibe",
-    "description": "",
-    "version": "0.0.1",
+    "description": "theme for vscode by yondav",
+    "version": "1.0.0",
     "engines": {
         "vscode": "^1.67.0"
+    },
+    "publisher": "yondav",
+    "author": {
+        "name": "Yoni David",
+        "email": "yoni@yondav.us",
+        "url": "https://yondav.us"
+    },
+    "repository": {
+        "url": "https://github.com/yondav/vibe",
+        "type": "git"
     },
     "categories": [
         "Themes"
