--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
 # Set default behavior to automatically normalize line endings.
 * text=auto
 
+/.yarn/**            linguist-vendored
+/.yarn/releases/*    binary
+/.yarn/plugins/**/*  binary
+/.pnp.*              binary linguist-generated
