--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vibe",
   "displayName": "vibe",
   "description": "theme for vscode by yondav",
-  "version": "2.0.0",
+  "version": "1.1.0",
   "engines": {
     "vscode": "^1.67.0"
   },
@@ -33,6 +33,8 @@
     "build": "yarn run prebuild && yarn run build:tsc && yarn run build:themes",
     "build:tsc": "tsc -p tsconfig.build.json",
     "build:themes": "node dist",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "changelog:preview": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 -n",
     "dev": "nodemon src/index.ts",
     "fix": "yarn run lint:fix && yarn run format",
     "format": "prettier . --write",
@@ -41,6 +43,7 @@
     "prebuild": "yarn run test",
     "preinstall": "yarn run git:hookspath && yarn run git:alias",
     "pretest": "yarn run fix && yarn run test:types",
+    "release": "standard-version",
     "test": "yarn run pretest && jest",
     "test:watch": "yarn run pretest jest --watch",
     "test:cov": "yarn run pretest jest --coverage",
@@ -59,6 +62,7 @@
     "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
+    "conventional-changelog-cli": "^4.1.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
@@ -68,6 +72,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
+    "standard-version": "^9.5.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
